--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/Logo-icon-100x100.png" sizes="32x32" />
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Bujinkan Iyashi Dojo Memebrs"
+      content="Web-App to record, organise and display Bujinkan posts and clips"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Bujinkan Iyashi Dojo Members</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
